# fullui

./: LICENSE  README.md  publish.bat  publish.py  pyproject.toml  setup.py
fullui/: __init__.py  animations.py  colors.py  gide.py  icons.py  layouts.py  themes.py  ui.py
fullui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
