[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "fullui"
version = "0.2.3"

description = "Advanced console UI framework for Python with colors, layouts, animations, themes, developer tools and interactive menus"

readme = {file="README.md", content-type="text/markdown"}

requires-python = ">=3.8"

license = {text="MIT"}

authors = [
 {name="Leonardo Farid Porras Bendezu", email="porritasbendezu@gmail.com"}
]

maintainers = [
 {name="Leonardo Farid Porras Bendezu", email="porritasbendezu@gmail.com"}
]


keywords = [
"cli",
"ui",
"console",
"terminal",
"ansi",
"colors",
"menus",
"books",
"quizzes",
"tui",
"framework",
"animations",
"themes",
"layouts",
"panels",
"dashboard",
"widgets",
"ascii-layouts",
"developer-tools",
"terminal-games",
"interactive-cli"
]


classifiers = [
"Development Status :: 4 - Beta",

"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3 :: Only",
"Programming Language :: Python :: 3.8",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",

"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",

"Environment :: Console",

"Intended Audience :: Developers",
"Intended Audience :: Education",
"Intended Audience :: End Users/Desktop",

"Topic :: Software Development :: Libraries",
"Topic :: Software Development :: User Interfaces",
"Topic :: Software Development :: Libraries :: Python Modules",
"Topic :: Terminals"
]


dependencies = [
"colorama>=0.4.6"
]


[project.scripts]
fullui-demo = "fullui:banner"


[project.urls]
Homepage = "https://github.com/porritasbendezu-lang/fullui"
Repository = "https://github.com/porritasbendezu-lang/fullui"
Issues = "https://github.com/porritasbendezu-lang/fullui/issues"
Documentation = "https://github.com/porritasbendezu-lang/fullui#readme"
Changelog = "https://github.com/porritasbendezu-lang/fullui/releases"


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["."]
include = ["fullui*"]


[tool.setuptools.package-data]
fullui = ["py.typed"]


[project.optional-dependencies]
dev = [
"pytest>=8",
"build>=1.2",
"twine>=5",
"ruff>=0.5"
]

docs = [
"mkdocs",
"mkdocs-material"
]